# aie-bootcamp

./: .gitignore
02_Embeddings_and_RAG/: .cursorignore  Pythonic_RAG_Assignment.ipynb  concat_files.sh  prompt.txt  pyproject.toml  run.sh
02_Embeddings_and_RAG/aimakerspace/: .gitignore  pyproject.toml
02_Embeddings_and_RAG/aimakerspace/data_files/: sample.csv  sample.docx  sample.md
02_Embeddings_and_RAG/aimakerspace/openai_utils/: chatmodel.py
02_Embeddings_and_RAG/aimakerspace/rag_api/: main.py
02_Embeddings_and_RAG/aimakerspace/rag_api/models/: enums.py  requests.py  responses.py
02_Embeddings_and_RAG/aimakerspace/rag_api/routers/: document.py  rag.py
02_Embeddings_and_RAG/aimakerspace/rag_api/services/: document.py  rag.py
02_Embeddings_and_RAG/aimakerspace/rag_faiss_db/: faiss_db.py  faiss_db_client.py  pipeline.py  visualization.py
02_Embeddings_and_RAG/aimakerspace/rag_faiss_db/indices/flat/: faiss_index_flat.index  faiss_index_flat_metadata.pkl
02_Embeddings_and_RAG/aimakerspace/rag_faiss_db/indices/hnsw/: faiss_index_hnsw.index  faiss_index_hnsw_metadata.pkl
02_Embeddings_and_RAG/aimakerspace/rag_faiss_db/indices/ivf/: faiss_index_ivf.index  faiss_index_ivf_metadata.pkl
02_Embeddings_and_RAG/aimakerspace/rag_faiss_db/indices/lsh/: faiss_index_lsh_metadata.pkl
02_Embeddings_and_RAG/aimakerspace/rag_faiss_db/results/: results.db
02_Embeddings_and_RAG/aimakerspace/rag_simple_db/: pipeline.py  simple_db.py  visualization.py
02_Embeddings_and_RAG/aimakerspace/rag_simple_db/results/: results.db
02_Embeddings_and_RAG/aimakerspace/rag_simple_db/vectors/: vector_db.pkl
02_Embeddings_and_RAG/aimakerspace/tests/: curl.sh
02_Embeddings_and_RAG/aimakerspace/utils/: splitter.py
02_Embeddings_and_RAG/aimakerspace/web_ui/: index.html
02_Embeddings_and_RAG/aimakerspace/web_ui/css/: styles.css
02_Embeddings_and_RAG/aimakerspace/web_ui/js/: main.js  ragService.js  visualization.js
02_Embeddings_and_RAG/aimakerspace/web_ui/utils/: logger.js
04_Production_RAG/: Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  LangSmith_and_Evaluation.ipynb  pyproject.toml
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb
05_Our_First_Agent_with_LangGraph/climate_research_agent/: README.md  agent.py  chainlit_app.py  pyproject.toml
06_Multi_Agent_with_LangGraph/: Multi_Agent_RAG_LangGraph.ipynb  pyproject.toml
(+13 files in other folders)
