[project]
name = "aimakerspace"
version = "0.1.0"
description = "AI MakerSpace project"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.11.11"
dependencies = [
    "numpy>=1.24.0",
    "faiss-cpu>=1.7.4",
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "PyMuPDF>=1.23.8",
    "pandas>=2.1.4",
    "python-docx>=1.0.1",
    "tiktoken>=0.5.2",
    "psutil>=5.9.0",
    "datasets>=2.16.1",
    "datasette>=0.64.3",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "huggingface-hub>=0.19.4",
    "plotly>=5.18.0",
    "pytest>=8.3.5",
    "httpx>=0.28.1",
    "pytest-asyncio>=0.26.0",
    "fastapi>=0.115.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pylint>=2.17.0",
]

benchmark = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag_faiss_db", "rag_simple_db", "openai_utils", "utils", "rag_api"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
]

[tool.ruff.lint.isort]
known-first-party = ["rag_faiss_db", "rag_simple_db", "openai_utils", "utils", "rag_api"]
